添加验证标签

--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -130,6 +130,16 @@
                     android:gravity="center"
                     android:background="@drawable/shape_retangle_5aa1fd_r25"
                     android:text="点击复制联系方式 QQ:1234567890>"/>
+                <ImageView
+                    android:id="@+id/iv_verify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_job_title"
+                    android:src="@drawable/verify_big"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="4dp"
+                    android:visibility="gone"
+                    android:layout_marginTop="13dp"/>
             </RelativeLayout>
             <RelativeLayout
                 android:id="@+id/rl_detail_2"
