--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="112dp"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingLeft="14dp"
+    android:minHeight="112dp"
     android:background="@drawable/recyclerview_touch_bg"
     >
 
@@ -56,9 +57,19 @@
         android:src="@drawable/go_detail_button"
         android:layout_alignParentRight="true"/>
     <View
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginRight="14dp"
+        android:layout_below="@id/tv_job_desc"
+        android:layout_marginTop="10dp"
         android:background="@color/divider"/>
+    <ImageView
+        android:id="@+id/iv_verify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_job_title"
+        android:src="@drawable/verify_big"
+        android:layout_marginLeft="164dp"
+        android:visibility="gone"
+        android:layout_marginTop="13dp"/>
 </RelativeLayout>
