--- a/app/src/main/res/drawable/shape_retangle_fa7e27_r25.xml
+++ b/app/src/main/res/drawable/shape_retangle_fa7e27_r25.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#5AA1FD" />
+    <solid android:color="#FA7E27" />
     <corners
         android:radius="25dp"/>
 </shape>
