--- a/app/src/main/res/layout/item_recommend_banner.xml
+++ b/app/src/main/res/layout/item_recommend_banner.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:paddingLeft="14dp"
-    android:paddingRight="14dp"
-    android:paddingTop="20dp"
-    android:paddingBottom="28dp">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="115dp" />
+        android:layout_height="104dp" />
 </RelativeLayout>
