--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingLeft="14dp"
-    android:minHeight="112dp"
+    android:minHeight="76dp"
     android:background="@drawable/recyclerview_touch_bg"
     >
 
     <TextView
         android:id="@+id/tv_job_title"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color_2A2A2A"
@@ -18,7 +18,6 @@
 
     <TextView
         android:id="@+id/tv_job_money"
-        android:layout_marginTop="5dp"
         android:layout_below="@id/tv_job_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,23 +36,23 @@
         android:textColor="@color/color_DB6D70"
         android:textSize="11sp"
         android:text="元/天"/>
+
     <TextView
         android:id="@+id/tv_job_desc"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/tv_job_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tv_job_money"
+        android:text="日结 | 长期 | 男女不限"
         android:textColor="@color/color_B8B7BA"
-        android:textSize="13sp"
-        android:text="日结 | 长期 | 男女不限"/>
+        android:textSize="13sp" />
 
     <ImageView
         android:id="@+id/go_detail_button"
         android:layout_below="@id/tv_job_title"
-        android:layout_width="89dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginRight="6dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="4dp"
         android:src="@drawable/go_detail_button"
         android:layout_alignParentRight="true"/>
     <View
@@ -61,7 +60,7 @@
         android:layout_height="1dp"
         android:layout_marginRight="14dp"
         android:layout_below="@id/tv_job_desc"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="@color/divider"/>
     <ImageView
         android:id="@+id/iv_verify"
@@ -69,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_job_title"
         android:src="@drawable/verify_big"
-        android:layout_marginLeft="164dp"
+        android:layout_marginLeft="196dp"
         android:visibility="gone"
-        android:layout_marginTop="13dp"/>
+        android:layout_marginTop="4dp"/>
 </RelativeLayout>
