--- a/app/src/main/res/layout/item_recommend_today.xml
+++ b/app/src/main/res/layout/item_recommend_today.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/tv_job_title"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color_2A2A2A"
@@ -21,12 +21,12 @@
         android:layout_height="90dp"
         android:scaleType="fitXY"
         android:layout_marginRight="14dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="7dp"
         android:src="@drawable/item_home_hot_bg_test"/>
 
     <TextView
         android:id="@+id/tv_job_desc"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:layout_below="@id/iv_job_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,16 +38,15 @@
     <ImageView
         android:id="@+id/go_detail_button"
         android:layout_below="@id/iv_job_icon"
-        android:layout_width="89dp"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_marginRight="6dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="5dp"
         android:src="@drawable/go_detail_button"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="6dp"/>
+        android:layout_alignParentRight="true" />
     <TextView
         android:id="@+id/tv_job_unit"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:layout_toLeftOf="@id/go_detail_button"
         android:layout_marginRight="15dp"
         android:layout_below="@id/iv_job_icon"
@@ -58,7 +57,7 @@
         android:text="元/天"/>
     <TextView
         android:id="@+id/tv_job_money"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="4dp"
         android:layout_toLeftOf="@id/tv_job_unit"
         android:layout_below="@id/iv_job_icon"
         android:layout_width="wrap_content"
