--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:gravity="center"
             android:textSize="10sp"
             android:button="@null"
-            android:visibility="gone"
+            android:visibility="visible"
             android:drawablePadding="4dp"
             android:text="@string/menu_recommend"
             android:textColor="@color/menu_home_text_color"
