--- a/app/src/main/res/drawable/shape_login_bg.xml
+++ b/app/src/main/res/drawable/shape_login_bg.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ff588ffe" />
     <gradient android:type="linear"
-        android:startColor="#F46B20"
-        android:endColor="#F67E23"
+        android:startColor="#FF4A6DFF"
+        android:centerColor="#FF6479FF"
+        android:endColor="#FF8287FF"
+        android:angle="90"
        />
     <corners android:radius="25dp" />
 </shape>
