--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_top_bg"
         android:layout_width="match_parent"
         android:layout_height="227dp"
-        android:background="@drawable/login_bg"/>
+        android:background="@drawable/mine_bg"/>
     <TextView
         android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
@@ -134,7 +134,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
-                    android:textColor="#F46B20"
+                    android:textColor="@color/color_main_text"
                     android:text="《服务协议》"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -147,7 +147,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
-                    android:textColor="#F46B20"
+                    android:textColor="@color/color_main_text"
                     android:text="《隐私协议》"/>
             </LinearLayout>
         </LinearLayout>
