--- a/app/src/main/res/layout/activity_personal_resume.xml
+++ b/app/src/main/res/layout/activity_personal_resume.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/iv_top_bg"
                 android:layout_width="match_parent"
                 android:layout_height="227dp"
-                android:background="@drawable/login_bg" />
+                android:background="@drawable/mine_bg" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
