--- a/app/src/main/res/layout/item_recommend_banner.xml
+++ b/app/src/main/res/layout/item_recommend_banner.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:clipChildren="false"
+    >
 
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:clipChildren="false"
+        android:background="@color/transparent"
         android:layout_height="104dp" />
 </RelativeLayout>
