--- a/app/src/main/res/layout/layout_home_top.xml
+++ b/app/src/main/res/layout/layout_home_top.xml
@@ -25,13 +25,13 @@
                 android:layout_width="46dp"
                 android:layout_height="46dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/top_menu_zjzq" />
+                android:src="@drawable/top_menu_jdyz" />
 
             <TextView
                 android:id="@+id/tv_tab1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="宅家赚钱"
+                android:text="简单上手"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/color_241D1D"
                 android:textSize="12sp" />
@@ -50,13 +50,13 @@
                 android:layout_width="46dp"
                 android:layout_height="46dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/top_menu_jdyz" />
+                android:src="@drawable/top_menu_zjtz" />
 
             <TextView
                 android:id="@+id/tv_tab2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="简单易做"
+                android:text="在家躺赚"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/color_241D1D"
                 android:textSize="12sp" />
@@ -81,7 +81,7 @@
                 android:id="@+id/tv_tab3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="高薪日结"
+                android:text="轻松兼职"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/color_241D1D"
                 android:textSize="12sp" />
@@ -106,7 +106,31 @@
                 android:id="@+id/tv_tab4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="网络兼职"
+                android:text="天天赚钱"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/color_241D1D"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_tab_5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_tab_5"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/top_menu_zjzq" />
+
+            <TextView
+                android:id="@+id/tv_tab5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="边赚边玩"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/color_241D1D"
                 android:textSize="12sp" />
