--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingLeft="14dp"
     android:paddingRight="14dp"
-    android:minHeight="75dp"
+    android:minHeight="66dp"
     android:background="@drawable/recyclerview_touch_bg"
     >
 
@@ -11,7 +11,7 @@
         android:id="@+id/tv_job_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="11dp"
         android:layout_marginRight="103dp"
         android:text="微信在线兼职，随时随地做，秒结"
         android:textColor="@color/color_2A2A2A"
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/tv_job_money"
-        android:layout_alignBottom="@id/tv_job_title"
+        android:layout_alignTop="@id/tv_job_title"
         android:layout_width="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         android:text="120"/>
     <TextView
         android:id="@+id/tv_job_unit"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@id/tv_job_money"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:text="元/天"/>
     <TextView
         android:id="@+id/tv_job_desc"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@id/tv_job_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,5 +71,5 @@
         android:src="@drawable/verify_big"
         android:layout_marginRight="60dp"
         android:visibility="visible"
-        android:layout_marginTop="27dp"/>
+        android:layout_marginTop="17dp"/>
 </RelativeLayout>
