--- a/app/src/main/res/layout/item_home_title.xml
+++ b/app/src/main/res/layout/item_home_title.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:background="@color/white"
     android:paddingLeft="14dp"
-    android:paddingRight="14dp"
-    android:background="@color/white">
+    android:paddingRight="14dp">
 
+    <View
+        android:layout_width="3dp"
+        android:layout_height="12dp"
+        android:layout_centerVertical="true"
+        android:background="@drawable/shape_title_left"/>
     <TextView
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="19sp"
+        android:textSize="13sp"
+        android:layout_marginLeft="8dp"
         android:layout_centerVertical="true"
         android:textColor="@color/color_282828"/>
 </RelativeLayout>
