--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -51,7 +51,8 @@
       <android.support.v7.widget.RecyclerView
           android:id="@+id/recycler"
           android:layout_width="match_parent"
-          android:layout_height="match_parent" />
+          android:layout_height="match_parent"
+          android:background="@color/white"/>
       <com.scwang.smartrefresh.layout.footer.ClassicsFooter
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
