--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -6,7 +6,7 @@
        android:id="@+id/iv_top_bg"
        android:layout_width="match_parent"
        android:layout_height="227dp"
-       android:background="@drawable/login_bg"
+       android:background="@drawable/mine_bg"
        />
    <ImageView
        android:id="@+id/iv_avatar"
