增加意见反馈逻辑

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -146,7 +146,7 @@
             android:gravity="center"
             android:drawablePadding="16sp"
             android:layout_centerVertical="true"
-            android:drawableLeft="@drawable/aboult_us_icon"/>
+            android:drawableLeft="@drawable/ic_feedback"/>
         <ImageView
             android:layout_width="7dp"
             android:layout_height="12dp"
