--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,6 +123,12 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="50dp"
                 android:gravity="center">
+                <CheckBox
+                    android:id="@+id/checkbox"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginRight="5dp"
+                    android:button="@drawable/selector_blue_checkbox" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
